<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/nav_chatroom"
        android:icon="@drawable/baseline_chat_black_18dp"
        android:title="@string/title_chatroom" />

    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/baseline_search_black_18dp"
        android:title="@string/title_search" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_action_name"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/nav_post"
        android:icon="@drawable/icons8_edit_24"
        android:title="@string/title_post" />

</menu>
